--- a/proto/Base.lproj/Main.storyboard
+++ b/proto/Base.lproj/Main.storyboard
@@ -31,7 +31,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
                                 <connections>
-                                    <action selector="addOptionOneImage:" destination="LYv-Rt-BG0" eventType="touchUpInside" id="PmI-Z1-oWa"/>
+                                    <action selector="addOptionOne:" destination="LYv-Rt-BG0" eventType="touchUpInside" id="PMT-q6-P2F"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aX1-jB-5ud">
@@ -39,7 +39,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
                                 <connections>
-                                    <action selector="addOptionTwoImage:" destination="LYv-Rt-BG0" eventType="touchUpInside" id="U2G-aZ-Hlo"/>
+                                    <action selector="addOptionTwo:" destination="LYv-Rt-BG0" eventType="touchUpInside" id="gL8-vj-sAy"/>
                                 </connections>
                             </button>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="6zu-o5-Mac">
@@ -61,11 +61,30 @@
                     <connections>
                         <outlet property="optionOneImageView" destination="td5-09-hpH" id="kLX-jH-225"/>
                         <outlet property="optionTwoImageView" destination="o4J-My-M7C" id="A67-Xh-nXj"/>
+                        <outlet property="pollFormatSegment" destination="6zu-o5-Mac" id="nDM-8c-biQ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nR7-pW-zn3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3162.4000000000001" y="578.86056971514245"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="Kzm-NM-22J">
+            <objects>
+                <viewController id="fAk-Ga-STn" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="bXR-tY-eQt"/>
+                        <viewControllerLayoutGuide type="bottom" id="Hs1-9B-LKt"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="dmj-pb-okq">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="J4f-aA-n5m" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3963" y="583"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="NAE-6z-JW9">
@@ -205,7 +224,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZAp-xW-cLS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4086" y="579"/>
+            <point key="canvasLocation" x="4185" y="-75"/>
         </scene>
         <!--polls-->
         <scene sceneID="eV7-wO-edG">
