--- a/proto/Base.lproj/Main.storyboard
+++ b/proto/Base.lproj/Main.storyboard
@@ -32,6 +32,17 @@
                                     </button>
                                 </subviews>
                             </view>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6wI-ZV-Xxs">
+                                <rect key="frame" x="46" y="333" width="282" height="276"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3py-cK-2I8">
+                                        <rect key="frame" x="126" y="123" width="30" height="30"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <state key="normal" title="Play"/>
+                                    </button>
+                                </subviews>
+                            </view>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="td5-09-hpH">
                                 <rect key="frame" x="46" y="51" width="282" height="277"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -78,6 +89,7 @@
                         <outlet property="optionOneImageView" destination="td5-09-hpH" id="kLX-jH-225"/>
                         <outlet property="optionOneVideoView" destination="LkM-8j-LOI" id="fTo-l3-24A"/>
                         <outlet property="optionTwoImageView" destination="o4J-My-M7C" id="A67-Xh-nXj"/>
+                        <outlet property="optionTwoVideoView" destination="6wI-ZV-Xxs" id="oHj-mB-oOc"/>
                         <outlet property="pollFormatSegment" destination="6zu-o5-Mac" id="nDM-8c-biQ"/>
                         <segue destination="BM2-Al-9qp" kind="presentation" identifier="showVideoCamera" id="NGg-8p-W2A"/>
                     </connections>
